--- a/Content/web_clothes.css
+++ b/Content/web_clothes.css
@@ -23,8 +23,7 @@
         justify-content: center;
     }
 }
-
-:root {
+*:root {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
 }
@@ -45,7 +44,9 @@ body {
     justify-content: space-evenly;
     padding: 1rem 0;
 }
-
+.logo > a > img{
+    height:100px;
+}
 .nav-link {
     list-style-type: none;
     display: flex;
@@ -68,15 +69,16 @@ body {
 }
 
 .search-box {
-    display: flex;
+    display: flex;    
 }
 
+
 .search-box > button {
-    padding: 0 1rem;
+    padding: 0 2rem;
 }
 
 .input-search {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     border-radius: .25rem;
     font-size: 1.5rem;
     margin: 0 0.25rem ;
@@ -198,18 +200,13 @@ body {
     text-decoration: none;
     color: #000;
 }
-.footer{
+.footer-title {
     justify-content: space-evenly;
     align-items: center;
     display: flex;
-}
-.footer-title{
-    height: 300px;
+    height: 400px;
     width: 100%;
     background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
 }
 .social > h2{
     color:white;
@@ -228,23 +225,22 @@ body {
 }
 .de-muc>li{
     list-style: none;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0;    
 }
 .de-muc > li > a{
     text-decoration: none;
     color: #fff;
     padding: 0.5rem 1rem;
 }
+.reversed > p{
+    font-weight:bold;
+    font-size:23px;
+    padding:2rem 0;
+    color:white;
+}
 .contact_us > h2{
     color:white;
 }
-.reserved {
-    display: flex;
-
-}
-    .reserved > h4 {
-        color: white;
-    }
 .title-dieu-khoan{
     display:flex;
     justify-content:center;
