--- a/Areas/admin/Views/products/Create.cshtml
+++ b/Areas/admin/Views/products/Create.cshtml
@@ -73,7 +73,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.images, "Hình Ảnh Sản Phẩm", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control", type = "file" } })
                 @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.images_size, "Hình Size", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.images_size, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                @Html.EditorFor(model => model.images_size, new { htmlAttributes = new { @class = "form-control", type = "file" } })
                 @Html.ValidationMessageFor(model => model.images_size, "", new { @class = "text-danger" })
             </div>
         </div>
